<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>My Status</item>
        <item>Update Weights</item>
        <item>Update Photos</item>
        <item>Notifications</item>
        <item>Review</item>
        <item></item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_home</item>
        <item></item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="app_name">Healthier LifeStyle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="user_name">Username</string>
    <string name="user_password">Password</string>
    <string name="register">New Users Register Here</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Submit</string>
    <string name="forgot_username_password">Forgot Username/Password?</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_user_info_update">UserInfoUpdate</string>
    <string name="back_button">Back</string>
    <string name="next_button">Next</string>
    <string name="desired_body_image">Please select your desired body image.</string>
    <string name="current_body_image">Please select your current body image.</string>
    <string name="title_activity_user_status_screen">UserStatusScreen</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="registration_button">Register Now</string>
    <string name="ok">OK</string>
    <string name="title_activity_user_status">UserStatus</string>
    <string name="register_now">New User? Register Now</string>
    <string name="title_activity_username__password__recovery">Username_Password_Recovery</string>
    <string name="about_app">aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="why_its_free">eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</string>
    <string name="How_this_all_works">cccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccccc</string>
    <string name="user_obligations">zzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz</string>
    <string name="agreeToTerms">I agree to the terms listed above</string>
    <string name="title_activity_user_agreements">UserAgreements</string>
    <string name="enter_current_weight">Please update your current weight:</string>
    <string name="update_weight_goal">Please update weight goal:</string>
    <string name="user_weight">"Your Current Weight: "</string>
    <string name="email">E-mail</string>
    <string name="submit">Submit</string>
    <string name="registration_instructions">"Please complete the form below and click \"Submit\" to register. "</string>
    <string name="password_one_letter">Password must contain at least one letter.</string>
    <string name="password_one_number">Password must contain at least one number.</string>
    <string name="password_too_long">Password cannot be more than 15 characters long.</string>
    <string name="password_too_short">Password must be at least 8 characters long.</string>
    <string name="username_one_number">Username must contain at least one number.</string>
    <string name="username_start_letter">Username must start with a letter.</string>
    <string name="username_too_long">Username cannot be more than 15 characters long.</string>
    <string name="username_too_short">Username must be at least 8 characters long.</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="thank_you_for_downloading">Thanks for downloading! Register now to start your path to a healthier lifestyle.</string>
    <string name="last_login">Last Login: </string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="thank_you">Thank You!</string>
    <string name="thank_you_for_registering">Please check your email to continue the registration process.</string>
    <string name="return_to_login">Return to Log In</string>
    <string name="username_exists_title">Username Error</string>
    <string name="username_exists">The username you entered is already in use, please use the forgot username/password link or try again.</string>
    <string name="email_exists_title">Email Error</string>
    <string name="email_exists">The email you entered is already in use, please use the forgot username/password link or try again.</string>
    <string name="device_id_exists_title">Device ID Error</string>
    <string name="device_id_exists">This device is already registered to: </string>
    <string name="error_occured_title">Error</string>
    <string name="error_occured">An error occurred while trying to validate your registration please try again later.</string>
    <string name="action_required_title">Action Required</string>
    <string name="action_required_text">Log in was successful, however aditional action is required before continuing.</string>
    <string name="login_failed_title">Log In Failed</string>
    <string name="login_failed_text">Login failed please try again</string>
    <string name="required">Required!</string>
    <string name="attention">Attention!</string>
    <string name="please_agree_to_terms">"Please agree to all the terms of use before continuing"</string>
    <string name="current_weight_prompt">Please enter your current weight</string>
    <string name="user_info">User Info</string>
    <string name="user_stats">User Stats</string>
    <string name="user_images">User Images</string>
    <string name="actions_required">Required Action</string>
    <string name="action_required">Required Actions</string>
    <string name="user_app_status">User App Status</string>
    <string name="title_activity_user_photo">UserPhoto</string>
    <string name="left_side">Left Side</string>
    <string name="right_side">Right Side</string>
    <string name="face">Face</string>
    <string name="belly">Belly</string>
    <string name="other_body_image">Other</string>
    <string name="take_photo">Take Photo</string>
    <string name="save_last_photo">Save Photo</string>
    <string name="left_side_photo">Take Left Side Photo</string>
    <string name="right_side_photo">Take Right Side Photo</string>
    <string name="face_photo">Take Face Photo</string>
    <string name="belly_photo">Take Belly Photo</string>
    <string name="other_photo">Take Other Photo</string>
    <string name="left_side_photo_instructions">Some Instructions for left_side_photo goes here</string>
    <string name="right_side_photo_instructions">Instructions for right_side photo goes here</string>
    <string name="face_photo_instructions">face photo instructions goes here</string>
    <string name="belly_photo_instructions">Belly photo instructions go here</string>
    <string name="other_photo_instructions">Other photo instructions go here</string>
    <string name="main_menu">Main Menu</string>
    <string name="enter_desired_weight">Please update your weight goal:</string>
    <string name="update">Update</string>
    <string name="desired_weight_prompt">Please enter your desired weight:</string>

</resources>