<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ViewFlipper
        android:id="@+id/photoFragmentFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/leftPhotoButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="42dp"
                android:text="@string/left_side_photo" />

            <ImageView
                android:id="@+id/leftSideImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/leftPhotoButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/leftSidePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="164dp"
                android:text="@string/left_side_photo_instructions" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/rightPhotoButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="42dp"
                android:text="@string/right_side_photo" />

            <ImageView
                android:id="@+id/rightSideImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/rightPhotoButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/rightSidePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="164dp"
                android:text="@string/right_side_photo_instructions" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/facePhotoButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="42dp"
                android:text="@string/face_photo" />

            <ImageView
                android:id="@+id/faceImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/facePhotoButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/facePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="164dp"
                android:text="@string/face_photo_instructions" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/bellyPhotoButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="42dp"
                android:text="@string/belly_photo" />

            <ImageView
                android:id="@+id/bellyImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/bellyPhotoButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/bellyPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="164dp"
                android:text="@string/belly_photo_instructions" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/otherPhotoButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="42dp"
                android:text="@string/other_photo" />

            <ImageView
                android:id="@+id/otherImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/otherPhotoButton"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/otherPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="164dp"
                android:text="@string/other_photo_instructions" />
        </RelativeLayout>

    </ViewFlipper>

    <Button
        android:id="@+id/nextBTN"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:enabled="false"
        android:text="@string/next_button" />

</FrameLayout>