<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/FrameLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/submit_registration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="5dp"
        android:enabled="false"
        android:text="@string/submit" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/user_desired_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registration_instructions" />

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/userGender"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/user_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ#!$"
                android:ems="10"
                android:hint="@string/user_name" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/userDOB"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/user_password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/passWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ#!$"
                android:ems="10"
                android:hint="@string/user_password"
                android:inputType="textPassword" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/user_DOB"
                android:layout_width="85dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </TableRow>

        <TextView
            android:id="@+id/returnToLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginTop="30dp"
            android:text="@string/return_to_login" />

    </LinearLayout>

</FrameLayout>